--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <div id="app">
       <canvas id="game">If you see this text your browser is old or javascript is disabled.</canvas>
+      <canvas id="dummy"></canvas>
     </div>
     <script type="module" src="/main.js"></script>
   </body>
